test/expected/explain_o_qmark_colon_k2i_i.out
struct S; explain int operator?:(S, int, int)
           ^
12: error: operator ?: can not be overloaded
